Sat Dec  5 17:26:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_str_new, env_path_str_new): make default string
	  UTF-8 for the case conversion is not possible.  [Bug #8822]

	* hash.c (get_env_cstr): convert non-ASCII string to UTF-8 string.

	* hash.c (ruby_setenv): use wide char version to put environment
	  variable to deal with non-ASCII value.

Sat Dec  5 09:56:50 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_CAS): old value to be swapped should be
	  same as the destination.  immediate value may need type
	  promotion.

	* ruby_atomic.h (ATOMIC_SIZE_CAS): fix the argument order of
	  InterlockedCompareExchange64.  new value and then old value is
	  the last.

Sat Dec  5 09:23:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): fix the size to be filled, not the
	  size of element, but the whole size of array.

Sat Dec  5 06:03:54 2015  Eric Wong  <e@80x24.org>

	* vm.c (ruby_vm_verbose_ptr): make static
	  (ruby_vm_debug_ptr): ditto

Sat Dec  5 00:56:29 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/ruby.h (RB_OBJ_TAINT): follow-up of r52881.
	  Turn into void expression not to use unexpected result.
	  Fix "operands have incompatible types" error with
	  Oracle Solaris Studio 12.x on Solaris.

Fri Dec  4 19:52:52 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_13.c: Added three missing lower/upper-case
	  character pairs (from Kimihito Matsui)

Fri Dec  4 18:57:57 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_4.c: Added missing lower/upper-case character
	  pair (U+014A and U+014B, LATIN CAPITAL/SMALL LETTER ENG)
	  (from Kimihito Matsui)

Fri Dec  4 16:48:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_obj_as_string): fstring should not be infected.
	  re-apply r52872 and fix a typo.
	  TODO: other frozen strings also may not be.

Fri Dec  4 15:21:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
